--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://unpkg.com/aframe-chromakey-material/dist/aframe-chromakey-material.min.js"></script>
 </head>
 <body>
-<video style="opacity: 0;" id="greenscreenvideo" src="greenScreen.mp4" loop
+<video style="opacity: 0;" id="greenscreenvideo" src="greenscreenvideo.mp4" loop
 autoplay muted></video>
 <a-scene>
 <a-sky color="lightblue" rotation="0 0 0"></a-sky>
